<resources>
    <string name="app_name">DiscGolfPutting</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="game_activity_test">Game</string>
    <string name="Save">Save</string>
    <string name="User">user</string>
    <string name="newUser">New User</string>
    <string name="title_activity_db_test">List</string>
    <string name="title_activity_graph_test">GraphTest</string>
    <string name="title_activity_new_game_type">New Game Type</string>
    <string name="Name">Name</string>
    <string name="Rounds">Rounds</string>
    <string name="nrOfThrowsPerRound">Number of throws per round</string>
    <string name="firstShotMultiplier">First shot multiplier</string>
    <string name="lastShotMultiplier">Last shot multiplier</string>
    <string name="allShotHitBonus">All shot hit bonus</string>
    <string name="game_type_name">Game type name</string>
    <string name="nr_of_rounds">Number of rounds</string>
    <string name="start_distance">Start distance</string>
    <string name="distance_increment">Distance increment</string>
    <string name="points_per_distance">Points per distance</string>
    <string name="statistics">Statistics</string>
    <string name="hits">Hits</string>
    <string name="throwType1">First</string>
    <string name="throwType2">Last</string>
    <string name="throwType0">Middle</string>
    <string name="title_activity_game_statstics">GameStatisticsActivity</string>
    <string name="delete">Delete</string>
    <string name="score">Score</string>
    <string name="pointsPerThrow">"Points per throw "</string>
    <string name="error_empty">This can not be empty</string>
    <string name="error_under_zero">This can not be under 0</string>
    <string name="error_zero">This can not be 0</string>
    <string name="imperial_or_metric">Imperial or metric</string>
    <string name="distance_type">distanceType</string>
    <string name="how_many_discs_per_round">How many throws per round</string>
    <string name="create_user_mame">Enter a user name</string>
    <string name="select_user">Select user</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_remove_player">Are you sure you want to remove player?</string>
    <string name="create_new_user">Create new user</string>
    <string-array name="sortOptionsContent">
        <item>Time</item>
        <item>Score</item>
        <item>Hit%</item>
    </string-array>
    <string-array name="sortOptionsTime">
        <item>All Time</item>
        <item>Month</item>
        <item>Week</item>
        <item>Day</item>
    </string-array>
    <string-array name="gameTypes">
        <item>Normal</item>
        <item>Dynamic</item>
        <item>Streak</item>
    </string-array>
    <string name="title_activity_multiplayer_game_statistics">MultiplayerGameStatistics</string>
    <string name="hit_perc">Hit %</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="all">All</string>
    <string name="hit">Hit</string>
    <string name="ppt">PPT</string>
    <string name="user_list">User list</string>
    <string name="game_type_list">Game type list</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="title_activity_game_dynamic">GameDynamicActivity</string>
    <string name="remaining">Remaining</string>
    <string name="new_dynamic_game">New dynamic game</string>
    <string name="new_game">New Game</string>
    <string name="disc_golf_putting">Disc Golf Putting</string>
    <string name="upgrade_error">Upgrade threshold can not be higher then number of throws per round</string>
    <string name="downgrade_error">Downgrade threshold can not be higher then nr of throws per round</string>
    <string name="All">All</string>
    <string name="progress">Progress</string>
    <string name="create_ngame_type">Create \n Game Type</string>
    <string name="list">List</string>
</resources>
