<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="51dp"
        android:paddingBottom="10dp"
        android:text="@string/disc_golf_putting"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_row="0"
            android:drawableLeft="@drawable/ic_add_circle_black_40dp"
            android:drawableStart="@drawable/ic_add_circle_black_40dp"
            android:onClick="goToGameActivity"
            android:text="@string/new_game" />

        <Spinner
            android:id="@+id/spinnerMainActivityGameTypes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_row="1" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="2"
            android:drawableLeft="@drawable/ic_timeline_black_40dp"
            android:drawableStart="@drawable/ic_timeline_black_40dp"
            android:onClick="goToProgress"
            android:text="@string/progress" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="2"
            android:drawableLeft="@drawable/ic_statistcs_black_40dp"
            android:drawableStart="@drawable/ic_statistcs_black_40dp"
            android:onClick="goToStatistics"
            android:text="@string/statistics" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="3"
            android:drawableLeft="@drawable/ic_settings_black_40dp"
            android:drawableStart="@drawable/ic_settings_black_40dp"
            android:onClick="goToSettings"
            android:text="@string/title_activity_settings" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="3"
            android:drawableLeft="@drawable/ic_create_black_40dp"
            android:drawableStart="@drawable/ic_create_black_40dp"
            android:onClick="goToGameNewGameType"
            android:text="@string/create_ngame_type" />

        <Button
            android:id="@+id/buttonMainList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center"
            android:layout_row="4"
            android:drawableLeft="@drawable/ic_list_black_40dp"
            android:drawableStart="@drawable/ic_list_black_40dp"
            android:onClick="goToDbTest"
            android:text="@string/list" />
    </GridLayout>

</RelativeLayout>