<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_multiplayer_game_statistics"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.myApp.vilrolf.discgolfputting.Activity.MultiplayerGameStatistics"
    tools:showIn="@layout/activity_multiplayer_game_statistics">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TableLayout
                    android:id="@+id/tableLayoutMultiplayerStatistics"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:id="@+id/trMultiName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textViewMultiName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="5dp"
                            android:text="@string/Name"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="24sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/trMultiScore"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textViewMultiScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/score"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="24sp" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/trMultiHit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textViewMultiHit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="24sp"
                            android:text="@string/hit" />
                    </TableRow>

                    <TableRow
                        android:id="@+id/trMultiPerc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textViewMultiPerc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="24sp"
                            android:text="@string/hit_perc" />


                    </TableRow>

                    <TableRow
                        android:id="@+id/trMultiPpt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:text="@string/ppt"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textSize="24sp" />
                    </TableRow>

                </TableLayout>
            </HorizontalScrollView>
        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/buttonMultiplayerStatisticsDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentTop="false"
            android:layout_alignWithParentIfMissing="false"
            android:onClick="deleteMultiplayerGame"
            android:text="@string/delete" />

        <com.db.chart.view.LineChartView
            android:id="@+id/linechartGameStatistics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/buttonMultiplayerStatisticsDelete"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:paddingBottom="60dp"
            android:paddingTop="60dp" />
    </RelativeLayout>


</LinearLayout>
