<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_game_dynamic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.myApp.vilrolf.discgolfputting.Activity.GameDynamicActivity"
    tools:showIn="@layout/activity_game_dynamic">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dynamicscrollViewUser">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TableLayout
                android:id="@+id/tableLayoutDynamicGameUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/tableRowDynamicGameUsers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:text="End"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/buttonDynamicGameEnd"
                        android:onClick="endDynamicGame"
                        android:minWidth="48dip"
                        android:visibility="invisible" />

                    <Button
                        android:id="@+id/buttonDynamicGameAddUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="gameDynamicAddUser"
                        android:minWidth="48dip"
                        android:background="@android:drawable/ic_input_add" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRowDynamicGameUsersScore"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:id="@+id/textView"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@string/score" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tableRowGameDynamicHits" >

                    <TextView
                        android:text="@string/hits"
                        android:paddingRight="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tableRowGameDynamicRemaining" >

                    <TextView
                        android:text="@string/remaining"
                        android:paddingRight="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dynamicscrollViewUser">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tableLayoutDynamicGame">

            </TableLayout>
        </LinearLayout>
    </HorizontalScrollView>

    <com.db.chart.view.LineChartView
        android:id="@+id/lineChartDynamicGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
